Fix spacing issue between title and instruction

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 6vh;
-    margin-top: -2.2vh;
+    margin-top: -1.7vh;
     padding-bottom: 1.1vh;
     font-size: calc(15px + 1vh);
 }
